// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/threading/global_threads/thread_item should report total number of replies 1`] = `
<body>
  <div>
    <div
      aria-describedby="ThreadItem__timestamp_1y8hpek81byspd4enyk9mp1ncw"
      aria-label="Thread by Someone"
      class="ThreadItem"
      id=""
      role="link"
      tabindex="0"
    >
      <div
        class="thread-item-header"
      >
        <div
          class="ThreadItem__author"
        >
          Someone
        </div>
        <div
          class="ThreadItem__tags"
        >
          <button
            class="TagWrapper-kezsCu ftZQnc Tag Tag--xs"
          >
            <span
              class="TagText-bWoQAI beIloY"
            >
              Team name
            </span>
          </button>
        </div>
        <span>
          timestamp
        </span>
      </div>
      <div
        class="menu-anchor alt-visible"
      >
        <div
          class="thread-menu"
        />
      </div>
      <div
        class="preview"
        dir="auto"
      >
        <span>
          test msg
        </span>
      </div>
      <div
        class="activity"
      >
        <div
          class="avatars"
        >
          avatars
        </div>
        9 replies
      </div>
      <span
        class="sr-only"
        id="ThreadItem__timestamp_1y8hpek81byspd4enyk9mp1ncw"
      >
        Last reply 
        <span>
          timestamp
        </span>
      </span>
    </div>
  </div>
</body>
`;

exports[`components/threading/global_threads/thread_item should report unread mentions 1`] = `
<body>
  <div>
    <div
      aria-describedby="ThreadItem__timestamp_1y8hpek81byspd4enyk9mp1ncw"
      aria-label="Thread by Someone"
      class="ThreadItem has-unreads"
      id=""
      role="link"
      tabindex="0"
    >
      <div
        class="thread-item-header"
      >
        <div
          class="indicator"
        >
          <div
            class="dot-mentions"
          >
            2
          </div>
        </div>
        <div
          class="ThreadItem__author"
        >
          Someone
        </div>
        <div
          class="ThreadItem__tags"
        >
          <button
            class="TagWrapper-kezsCu ftZQnc Tag Tag--xs"
          >
            <span
              class="TagText-bWoQAI beIloY"
            >
              Team name
            </span>
          </button>
        </div>
        <span>
          timestamp
        </span>
      </div>
      <div
        class="menu-anchor alt-visible"
      >
        <div
          class="thread-menu"
        />
      </div>
      <div
        class="preview"
        dir="auto"
      >
        <span>
          test msg
        </span>
      </div>
      <div
        class="activity"
      >
        <div
          class="avatars"
        >
          avatars
        </div>
        5 new replies
      </div>
      <span
        class="sr-only"
        id="ThreadItem__timestamp_1y8hpek81byspd4enyk9mp1ncw"
      >
        Last reply 
        <span>
          timestamp
        </span>
      </span>
    </div>
  </div>
</body>
`;

exports[`components/threading/global_threads/thread_item should report unread messages 1`] = `
<body>
  <div>
    <div
      aria-describedby="ThreadItem__timestamp_1y8hpek81byspd4enyk9mp1ncw"
      aria-label="Thread by Someone"
      class="ThreadItem has-unreads"
      id=""
      role="link"
      tabindex="0"
    >
      <div
        class="thread-item-header"
      >
        <div
          class="indicator"
        >
          <div
            class="dot-unreads"
          />
        </div>
        <div
          class="ThreadItem__author"
        >
          Someone
        </div>
        <div
          class="ThreadItem__tags"
        >
          <button
            class="TagWrapper-kezsCu ftZQnc Tag Tag--xs"
          >
            <span
              class="TagText-bWoQAI beIloY"
            >
              Team name
            </span>
          </button>
        </div>
        <span>
          timestamp
        </span>
      </div>
      <div
        class="menu-anchor alt-visible"
      >
        <div
          class="thread-menu"
        />
      </div>
      <div
        class="preview"
        dir="auto"
      >
        <span>
          test msg
        </span>
      </div>
      <div
        class="activity"
      >
        <div
          class="avatars"
        >
          avatars
        </div>
        2 new replies
      </div>
      <span
        class="sr-only"
        id="ThreadItem__timestamp_1y8hpek81byspd4enyk9mp1ncw"
      >
        Last reply 
        <span>
          timestamp
        </span>
      </span>
    </div>
  </div>
</body>
`;
